[package]
name = "ncnn-bind"
version = "0.1.1"
authors = ["tpoisonooo <khj.application@aliyun.com>"]
edition = "2021"
description = "ncnn Rust binding"
license = "Apache-2.0"
homepage = "https://github.com/tpoisonooo/rust-ncnn"
repository = "https://github.com/tpoisonooo/rust-ncnn"
keywords = ["binding", "ncnn"]

[features]
# Uses dynamic linking instead of static. May require cleaning `target/` dir after change.
dynamic = []
# Enable vulkan backend.
vulkan = []

[dependencies]
libc = "0.2"

[build-dependencies]
cmake = "0.1"
bindgen    = { version = "0.59.2", default-features = false, features = ["runtime"] }
